Přidána mobilní verze a link pro instagram

--- a/main/index.html
+++ b/main/index.html
@@ -8,12 +8,21 @@
     <link rel="script" href="./script.js">
 </head>
 <body>
+
+    <!--
     <div class="followus-container">
+        <div class="icons">
+            <a href="instagram_link">
+                <img src="./pics/instagram-modified.svg" alt="Instagram icon" class="icon-icon">
+            </a>
+        </div>
+
         <div class="followus-text">Sledujte nás na</div>
         <div class="arrow">
             <img src="./pics/arrow.svg" alt="">
         </div>
     </div>
+    -->
     <video autoplay muted loop id="background-video">
         <source src="./pics/blue-animated-gradient-background.mp4" type="video/mp4">
         Your browser does not support the video tag.
@@ -21,14 +30,6 @@
         <div class="main-container">
         <div class="main-text">
             <span id="bold">EDUCAnet</span>
-            <div class="icons">
-                <a href="instagram_link">
-                    <img src="./pics/instagram-modified.svg" alt="Instagram icon" class="icon-icon">
-                </a>
-                <a href="discord_link">
-                    <img src="./pics/discord-modified.svg" alt="Discord icon" class="icon-icon">
-                </a>
-            </div>
             <br>
             <span id="light">League</span>
         </div>
@@ -37,6 +38,9 @@
         </div>
         <div class="lower-text">
             Coming soon
+        </div>
+        <div class="follow-us">
+            <span>Sleduj nás na <a href="#" class="instagram-link">Instagramu</a> pro nejnovější zprávy</span>
         </div>
     </div>
 </body>
